--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,11 @@
-html, body {
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;1,700&display=swap');
+
+html {
     height: 100vh;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
-#app, .wrapper-div {
+body, #app {
     height: 100%;
     background: $main-color;
     color: $secondary-color;
