--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;1,700&display=swap');
 
 html {
-    height: 100vh;
+    height: 100%;
     font-family: 'Josefin Sans', sans-serif;
 }
 
