--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans&family=Roboto:wght@400;700&display=swap');
 
 html {
     height: 100%;
     font-family: 'Josefin Sans', sans-serif;
+
 }
 
 body, #app {
