--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans&family=Roboto:wght@400;700&display=swap');
 
+::selection {
+    color: #000;
+    background: #fff;
+}
+
 html {
     height: 100%;
     font-family: 'Josefin Sans', sans-serif;
