--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,5 +18,5 @@ body, #app {
 }
 
 .router-link-exact-active {
-    box-shadow: 0 0 2px 0 rgba(225,188,41,1);
+    box-shadow: 0 0 0 0.5px rgba(225,188,41,1);
 }
