Finish stylings for articles with syntax highlighting enabled

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,3 +1,9 @@
 $main-color: #2F2F2F;
 $secondary-color: #FDFDFD;
 $highlight-color: #E1BC29;
+
+// Highlight.js colors
+$keyword: #ffdb58;
+$attr: #ff8858;
+$function: #ff587c;
+$string: #8858ff;
