--- a/src/styles/rambles.scss
+++ b/src/styles/rambles.scss
@@ -1,9 +1,9 @@
 .back-link {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
-    margin: 3% 1% 1% 1%;
+    margin: 2% 1% 1% 20%;
     display: inline-flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: flex-start;
     color: $highlight-color;
     font-size: 1.5em;
@@ -15,23 +15,77 @@
 
     &:hover {
         background: lighten($main-color, 7);
-
-        &:before {
-            transform: translate(-3px);
-        }
+        &:before { transform: translate(-3px) }
     }
 
     &:active {
         background: lighten($main-color, 10);
-
-        &:before {
-            transform: translate(-5px);
-        }
+        &:before { transform: translate(-5px) }
     }
 
     &:before {
         content: "<";
         margin: 0 7px;
         transition: all 100ms ease-in-out;
+    }
+}
+
+.ramble-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    section {
+        width: 55%;
+        background: lighten($main-color, 5);
+        display: flex;
+        flex-flow: column nowrap;
+        margin-bottom: 1.5%;
+        padding: 2%;
+        box-shadow: -6px 6px 0 0 darken($main-color, 10);
+
+        h1, h2 { text-align: center }
+
+        h1 {
+            border-bottom: 3px solid $highlight-color;
+            margin: 1% 0 0 0;
+        }
+
+        h2 {
+            display: flex;
+            justify-content: center;
+            margin: 2.5% auto 1% auto;
+            border-bottom: 3px solid $highlight-color;
+        }
+
+        p { font-size: 1.1em }
+
+        blockquote, pre {
+            background: $main-color;
+            padding: 2em;
+        }
+
+        pre {
+            overflow: scroll;
+            display: flex;
+            border-left: 4px solid $highlight-color;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+        }
+
+        code {
+            margin-left: 2%;
+            color: darken($secondary-color, 40);
+            user-select: text;
+            cursor: text;
+
+            .hljs-keyword { color: $keyword  }
+            .hljs-number { color: $keyword  }
+            .hljs-attr { color: $attr  }
+            .hljs-comment { color: darken($secondary-color, 60) }
+            .hljs-string { color: $string  }
+            .hljs-built_in { color: red  }
+            .hljs-function { color: $function }
+        }
     }
 }
